src/app/components/docs/docs.component.css
.hero {
    box-sizing: border-box;
    box-shadow: none;
    padding: 48px 48px 32px 48px;
    position: relative;
    height: 168px;
}

.background-sky {
    background-color: #1976D2;
    background: -webkit-linear-gradient(305deg,#0D47A1,#42A5F5);
    background: linear-gradient(145deg,#0D47A1,#42A5F5);
    color: #fff;
}

.hero .hero-title {
    display: inline-block;
    font-size: 28px;
    font-weight: 400;
    float: left;
    line-height: 48px;
    margin: 0 8px 0 0;
    text-transform: uppercase;
}

.banner{
    background: rgba(236,239,241,0.24);
    /*border-bottom: 1px solid #ECEFF1;*/
    box-sizing: border-box;
    font-size: 18px;
    font-weight: 200;
    padding: 32px 48px;
    min-height: 97px;
}

/*div{
    padding: 70px;
}*/

a{
    color: black;
    text-decoration: none;
}
a:hover{
    text-decoration: none;
}
md-sidenav-layout{
    height: 100vh;
}

md-sidenav{
    width: 225px;
    background-color: whitesmoke;
    /*padding: 10px;*/
    /*padding: 10px;*/
}

.my-content {
  margin: 0;
  width: 100%;
}

ul{
    /*background: #C0C0C0;*/
    list-style-type: none;
}

ul.side-nav-links li > a:hover{
    cursor: pointer;
}

ul li > a >span:hover{
    cursor: pointer;
}

.side-nav-links > li{
    border-bottom: 2px solid #F5F5F5;
    margin-top: 5px;
}

#submenu1 li a{
    padding-left: 30px;
}

#submenu2 li a{
    padding-left: 30px;
}

